2015-03-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use pan-down-symbolic instead of balsa-drop-down

	* images/16x16/Makefile.am: balsa-drop-down has been removed
	* src/balsa-icons.c (balsa_register_pixmaps): change to
	pan-down-symbolic

2015-03-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* images/16x16/balsa-drop-down.png: remove it.

2015-02-27  Albrecht Dreß

	Enable the request of Delivery Status Notifications

	* libbalsa/identity.[hc]: define default DSN setting, load and store it
	* libbalsa/identity.c, src/balsa-index.c, src/filter-edit-callbacks.c:
	fix clang nagging about a misplaced 'static const' qualifier
	* libbalsa/message.h: add request dsn flag
	* libbalsa/send.c: instruct libesmtp to request the DSN
	* libbalsa/send.c: pass const parameter as const
	* src/balsa-icons.c: add braces around macro
	* src/sendmsg-window.[hc]: add GUI stuff for requesting the DSN

2015-02-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Actually change spell-checking language

	* src/sendmsg-window.c (sw_spell_detach), (sw_spell_attach):
	detach any current spell-checker before attaching a new one.

2015-02-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix some spacing issues

	* src/toolbar-prefs.c (customize_dialog_cb): allocate extra
	vertical space to the available and current toolbar item lists;
	(create_toolbar_page): separate the 'restore' and 'current'
	buttons by minimum 5px.

2015-02-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c (bw_enable_mailbox_menus): suppress cppcheck
	null pointer error.

2015-02-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/ab-main.c (address_book_change_state): do not crash after
	deleting address book.

2015-02-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/application-helpers.c (libbalsa_window_get_menu_bar),
	(libbalsa_window_set_accels): remove old accel group before
	setting new one.

2015-02-19  Peter Bloomfield  <pbloomfield@bellsouth.net>
